# shinc-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  release.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: pre-release-hook.sh  release.sh
shinc_derive/: Cargo.toml  README.md  release.toml
shinc_derive/src/: lib.rs
shinc_derive/src/derives/: command.rs  mod.rs
src/: cli.rs  consts.rs  de.rs  error.rs  macros.rs  main.rs  prelude.rs  validator.rs
src/commands/: build.rs  clean.rs  completion.rs  completions.rs  dist.rs  install_shell.rs  man.rs  mod.rs  release.rs
src/commands/config/: generate.rs  list.rs  mod.rs  show.rs
src/commands/homebrew/: formula.rs  mod.rs
src/config/: mod.rs
src/utils/: formatter.rs  fs.rs  hashlib.rs  mod.rs  path.rs  process.rs  shell.rs  terminal.rs  tips.rs
src/utils/argc/: mod.rs  parser.rs  tag.rs
src/utils/vcs/: git.rs
templates/config/: default.toml
templates/homebrew/: formula.rb
templates/shell/: install.sh
