[workspace]
resolver = "2"
members = ["shinc_derive"]

[workspace.package]
license = "MIT"
edition = "2021"

[package]
name = "shinc"
version = "0.1.0"
description = "Generate a bash cli script using `argc`."
repository = "https://github.com/druagoon/shinc-rs"
edition.workspace = true
license.workspace = true
categories = ["command-line-interface"]
keywords = ["shinc", "cli", "bash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.47"
config = "0.15.11"
env_logger = "0.11.7"
log = "0.4.26"
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
shinc_derive = { path = "./shinc_derive" }
toml = { version = "0.8.20", features = ["preserve_order"] }
