[workspace]
resolver = "2"
members = ["shinc_derive"]

[workspace.package]
license = "MIT"
edition = "2021"

[package]
name = "shinc"
version = "0.0.1"
description = "Generate a bash cli script using argc"
repository = "https://github.com/druagoon/shinc-rs"
edition.workspace = true
license.workspace = true
categories = ["command-line-interface"]
keywords = ["shinc", "cli", "bash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.98"
argc = { version = "1.22.0", default-features = false, features = [
    "build",
    "compgen",
    "completions",
    "eval-bash",
    "mangen",
    "native-runtime",
    "wrap-help",

    # deps
    "base64",
    "num_cpus",
    "path-absolutize",
    "threadpool",
] }
clap = { version = "4.5.36", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.47"
colored = "3.0.0"
config = "0.15.11"
dialoguer = "0.11.0"
env_logger = "0.11.8"
flate2 = "1.1.1"
git-cliff = "2.8.0"
git2 = { version = "0.20.1", features = ["vendored-openssl"] }
heck = "0.5.0"
log = "0.4.27"
nom = "8.0.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "native-tls-vendored",
] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
shellexpand = "3.1.0"
shinc_derive = { version = "0.0.1", path = "./shinc_derive" }
tar = "0.4.44"
tera = "1.20.0"
toml_edit = { version = "0.22.24", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
which = "7.0.3"

[dev-dependencies]
dirs = "6.0.0"
